--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>About Me</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page!</h1>
-    <p>This is my first GitHub Pages site.</p>
+    <header>
+        <h1>Welcome to My Page!</h1>
+    </header>
+    <main>
+        <section id="introduction">
+            <h2>About Me</h2>
+            <p>
+                Hi! I'm currently pursuing a Master's degree in 
+                <strong>Foundation of Data Science</strong> at 
+                <strong>North Carolina State University (NCSU)</strong>. 
+                I also work as a Manager in the <strong>IT Management Division</strong> 
+                at <strong>Korea Exchange</strong>.
+            </p>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+        </section>
+        <section id="fun-fact">
+            <h2>Fun Fact</h2>
+            <button id="revealFact">Click to reveal a fun fact about me!</button>
+            <p id="funFact" class="hidden">I enjoy learning new technologies and solving complex problems!</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Your Name</p>
+    </footer>
 </body>
 </html>
