--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+            <p>Email: <a href="mailto:jgoo@ncsu.edu">jgoo@ncsu.edu</a></p>
         </section>
         <section id="fun-fact">
             <h2>Fun Fact</h2>
